--- a/8.RepasoHTML/listas.html
+++ b/8.RepasoHTML/listas.html
@@ -82,14 +82,14 @@
                 <ul>
                     <li>Mis películas favoritas.
                         <ul type="square">
-                            <li></li>
-                            <li></li>
+                            <li>Avatar</li>
+                            <li>Avengers</li>
                         </ul>
                     </li>
                     <li>Mis actores/actrices favoritas.
                         <ul type="square">
-                            <li></li>
-                            <li></li>
+                            <li>Johnny Deep</li>
+                            <li>Sandra Bullock</li>
                         </ul>
                     </li>
                 </ul>
@@ -97,45 +97,65 @@
             <ul>
                 <li>Deportes</li>
                 <ul>
-                    <li>Mis Deportes favoritas.
+                    <li>Mis Deportes favoritos.
                         <ul type="square">
-                            <li></li>
-                            <li></li>
+                            <li>Balonmano</li>
+                            <li>Surf</li>
                         </ul>
                     </li>
                 </ul>
                 <ul>
                     <li>Mis Deportistas favoritos.
                         <ul type="square">
-                            <li></li>
-                            <li></li>
+                            <li>Ana Peleteiro</li>
+                            <li>Rafa Nadal</li>
                         </ul>
                     </li>
                 </ul>
                 <ul>
-                    <li>Cine</li>
+                    <li>Comida</li>
                     <ul>
-                        <li>Mis películas favoritas.
-                            <ul type="square">
-                                <li></li>
-                                <li></li>
-                            </ul>
-                        </li>
-                        <li>Mis actores/actrices favoritas.
-                            <ul type="square">
-                                <li></li>
-                                <li></li>
-                            </ul>
+                        <ul type="circle">
+                            <li>Pizza</li>
+                            <li>Berenjena Rellena</li>
+                            <li>Langostinos</li>
+                        </ul>
                         </li>
                     </ul>
                 </ul>
-
         </section>
-        <section></section>
-        <section></section>
-        <section></section>
+
+        <section>
+            <h2>5- Lista de definiciones</h2>
+            <dl>
+                <dt>Procrastinación:</dt>
+                <dd>(del latín procrastinare: pro, 'adelante', y crastinus, 'mañana'),​ postergación o posposición es la acción o hábito de retrasar actividades o situaciones que deben atenderse, sustituyéndolas por otras situaciones más irrelevantes o agradables por miedo a afrontarlas o pereza a realizarlas.</dd>
+                <dt>Chocoholismo:</dt>
+                <dd>Persona adicta al chocolate.</dd>
+                <dt>Snoozeitis:</dt>
+                <dd>expresión coloquial o humorística derivada del verbo inglés "snooze", que significa "dormitar" o "posponer la alarma".</dd>
+                <dt>Nomofobia:</dt>
+                <dd> miedo irracional a estar sin teléfono móvil.</dd>
+            </dl>
+        </section>
+
+        <section>
+            <h2>6- Clasificación actual de la liga División de Honor de Waterpolo Masculina</h2>
+            <li>Los 3 primeros de la Liga</li>
+            <ol type="1">
+                <li>Zodiac CN Atlètic-Barceloneta</li>
+                <li>CN Sabadell</li>
+                <li>CN Terrassa</li>
+            </ol>
+            <li>Los 3 últimos de la Liga</li>
+            <ol reversed>
+                <li value="20">Real Canoe NC</li>
+                <li>CN Caballa-Ciudad de Ceuta</li>
+                <li>CN Rubí</li>
+            </ol>
+        </section>
     </main>
-    <footer></footer>
+    <footer>&copy;Creado por Lexie 2025</footer>
 
 </body>
 
