--- a/8.RepasoHTML/listas.html
+++ b/8.RepasoHTML/listas.html
@@ -155,7 +155,7 @@
             </ol>
         </section>
     </main>
-    <footer>&copy;Creado por Lexie 2025</footer>
+    <footer><p>&copy;Creado por Lexie 2025</p></footer>
 
 </body>
 
