--- a/8.RepasoHTML/tablas.html
+++ b/8.RepasoHTML/tablas.html
@@ -145,7 +145,7 @@
         </table>
 
     </main>
-    <footer>&copy;Creado por Lexie 2025</footer>
+    <footer><p>&copy;Creado por Lexie 2025</p></footer>
 </body>
 
 </html>
