--- a/8.RepasoHTML/formularios.html
+++ b/8.RepasoHTML/formularios.html
@@ -77,7 +77,7 @@
         <input type="file" id="photo" name="photo" accept="image/*" required><br><br>
         <input type="submit" value="Enviar">
     </main>
-    <footer>&copy;Creado por Lexie 2025</footer>
+    <footer><p>&copy;Creado por Lexie 2025</p></footer>
 
 </body>
 
