--- a/10.introduccionCSS/Fondos/fondos.html
+++ b/10.introduccionCSS/Fondos/fondos.html
@@ -39,7 +39,7 @@
                 libero mollitia dolore.</p>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <p>&copy;Creado por Lexie 2025</p>
     </footer>
 </body>
