--- a/10.introduccionCSS/Fondos/fondos.html
+++ b/10.introduccionCSS/Fondos/fondos.html
@@ -13,6 +13,7 @@
         <h1>Cabecera</h1>
     </header>
     <main>
+        section#sec$*5>h2+p
         <section class="secc1">
             <h2>Fondos1</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium asperiores, in iusto eius
