--- a/12.EventoCultural/index.html
+++ b/12.EventoCultural/index.html
@@ -9,6 +9,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Molengo&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel='stylesheet' href='css/style.css'>
 </head>
 
@@ -24,40 +25,73 @@
             </nav>
         </div>
         <div class="poster">
-            <h1>POBAS OFICIAIS DA LIGA AUTONÓMICA DE AGILITY</h1>
-            <h2>COPA DE AGILITY TROFEO ABANCA SEMANA VERDE</h2>
+            <h1>Un encuentro para celebrar la destreza, velocidad y conexión entre humanos y sus perros.</h1>
             <button>INSCRIBETE</button>
         </div>
     </header>
     <main class="cuerpo">
+        <hr>
+        <section class="activi">
+            <p id="p1">Competición Ecuestre</p>
+            <p id="p2">Concursos Ganaderos</p>
+            <p id="p3">Actuaciones Musicales</p>
+        </section>
+        <hr>
         <section id="feria">
-            <h2>Feria verde en Silleda</h2>
-            <div>
-                <p></p>
-                <p></p>
-                <p></p>
+            <div class="sec1">
+                <div class="fecha">
+                    <span class="material-symbols-outlined">
+                        calendar_month
+                    </span>
+                    <h2>FECHAS</h2>
+                    <p>5 - 8 de junio 2025</p>
+                    <p>Gratuita</p>
+                </div>
+                <div class="localizacion">
+                    <span class="material-symbols-outlined">
+                        location_on
+                    </span>
+                    <h2>LOCALIZACIÓN</h2>
+                    <p>Feria Internacional de Galicia</p>
+                    <p>Abanca-Silleda (cerca de Santiago de Compostela - España)</p>
+                </div>
+                <div class="acceso">
+                    <span class="material-symbols-outlined">
+                        star
+                    </span>
+                    <h2>ACCESO</h2>
+                    <p>Gratuito</p>
+                    <p>Jueves y viernes: 10.00 a 20.00h</p>
+                    <p>Fin de semana: 10.00 a 21.00</p>
+                </div>
             </div>
         </section>
-        <section id="colaboradores">
-            <h2>Colaboradores</h2>
-            <div>
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+        <hr>
+        <section id="colaboradores" class="sec2">
+            <h2>COLABORADORES</h2>
+            <div class="colab">
+                <img src="img/abanca.png" alt="Logo del colaborador de abanca">
+                <img src="img/asociacion-ferias.png" alt="Logo del colaborador de asociación de ferias españolas">
+                <img src="img/xunta.png" alt="Logo del colaborador de xunta de Galicia">
             </div>
         </section>
-        <section id="organizador">
-            <h2>Organizado por:</h2>
-            <img src="" alt="">
-            <p></p>
+        <hr>
+        <section id="organizador" class="org">
+            <h2>INVITADO</h2>
+            <div class="pers">
+            <img src="img/AdrianBajo.jpeg" alt="Foto de Adrián Bajo persona destacada en el mundo de agility español" width="300px">
+            <p>Adrián Bajo</p>
+            </div>
         </section>
-
+        <hr>
     </main>
     <footer id="contacto" class="footer">
-        <h2></h2>
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+        <h2>REDES</h2>
+        <div class="redes">
+        <img src="img/facebook (2).png" alt="Logo de facebook">
+        <img src="img/social.png" alt="Logo de instagram">
+        <img src="img/tik-tok.png" alt="Logo tik-tok">
+        </div>
         <p>&copy; Creada por Lexie 2025</p>
     </footer>
 </body>
