--- a/12.EventoCultural/index.html
+++ b/12.EventoCultural/index.html
@@ -32,9 +32,12 @@
     <main class="cuerpo">
         <hr>
         <section class="activi">
-            <p id="p1">Competición Ecuestre</p>
-            <p id="p2">Concursos Ganaderos</p>
-            <p id="p3">Actuaciones Musicales</p>
+            <h2>ACTIVIDADES</h2>
+            <div class="parra">
+                <p>Competición Ecuestre</p>
+                <p>Concursos Ganaderos</p>
+                <p>Actuaciones Musicales</p>
+            </div>
         </section>
         <hr>
         <section id="feria">
@@ -79,8 +82,9 @@
         <section id="organizador" class="org">
             <h2>INVITADO</h2>
             <div class="pers">
-            <img src="img/AdrianBajo.jpeg" alt="Foto de Adrián Bajo persona destacada en el mundo de agility español" width="300px">
-            <p>Adrián Bajo</p>
+                <img src="img/AdrianBajo.jpeg"
+                    alt="Foto de Adrián Bajo persona destacada en el mundo de agility español" width="300px">
+                <p>Adrián Bajo</p>
             </div>
         </section>
         <hr>
@@ -88,9 +92,9 @@
     <footer id="contacto" class="footer">
         <h2>REDES</h2>
         <div class="redes">
-        <img src="img/facebook (2).png" alt="Logo de facebook">
-        <img src="img/social.png" alt="Logo de instagram">
-        <img src="img/tik-tok.png" alt="Logo tik-tok">
+            <img src="img/facebook (2).png" alt="Logo de facebook">
+            <img src="img/social.png" alt="Logo de instagram">
+            <img src="img/tik-tok.png" alt="Logo tik-tok">
         </div>
         <p>&copy; Creada por Lexie 2025</p>
     </footer>
