--- a/Duplicar/index.html
+++ b/Duplicar/index.html
@@ -21,7 +21,7 @@
                 <p>Excelente</p>
                 <p>Obtuviste una puntuación superior al 65% de las personas que realizaron estas pruebas</p>
             </div>
-            <div class="cual2">
+            <div class="cua2">
                 <h2>Resumen</h2>
                 <div class="tab">
                     <div id="item1">
