--- a/14.finalCSS/ej2-pseudoclases.html
+++ b/14.finalCSS/ej2-pseudoclases.html
@@ -58,6 +58,16 @@
         <section>
             <h2>Solución</h2>
             <!-- Aquí se va a realizar el ejercicio anterior -->
+            <div class="botones">
+                <div>
+                    <h3>Default</h3>
+                    <button>Enviar</button>
+                </div>
+                <div>
+                    <h3>Disabled</h3>
+                    <button disabled>Enviar</button> <!--Boton desactivado en css ponerlo de ultimo-->
+                </div>
+            </div>
         </section>
 
         <hr>
@@ -109,6 +119,33 @@
         <section>
             <h2>Solución</h2>
             <!-- Aquí se va a realizar el primer formulario -->
+            <form action="" method="get">
+                <p>¿Qué estilos de música son tus preferidos?</p>
+                <div class="form1">
+                    <input type="checkbox" id="rock">
+                    <label for="rock">Rock</label>
+                    <input type="checkbox" id="pop">
+                    <label for="pop">Pop</label>
+                    <input type="checkbox" id="indie">
+                    <label for="indie">Indie</label>
+                    <input type="checkbox" id="techno">
+                    <label for="techno">Techno</label>
+                    <input type="checkbox" id="clasica">
+                    <label for="clasica">Clásica</label>
+                </div>
+                <p>Si tuviese que escoger a qué concierto ir, ¿cuál preferirías?</p>
+                <div class="form1">
+                    <input type="radio" name="concierto" id="acdc" value="ac">
+                    <label for="acdc">ACDC</label>
+                    <input type="radio" name="concierto" id="beatles" value="bea">
+                    <label for="beatles">The Beatles</label>
+                    <input type="radio" name="concierto" id="queen" value="quee">
+                    <label for="queen">Queen</label>
+                    <input type="radio" name="concierto" id="rolling" value="rol">
+                    <label for="rolling">The Rolling Stones</label>
+                </div>
+                <button>Enviar</button>
+            </form>
         </section>
 
         <section>
@@ -134,6 +171,17 @@
         <section>
             <h2>Solución</h2>
             <!-- Aquí se va a realizar el segundo formulario -->
+             <h3>Ejemplo de solución</h3>
+             <form action="" method="get">
+                <div>
+                    <label for="nombre">Nombre completo</label>
+                    <input type="text">
+                    <label for="email">Correo electrónico</label>
+                    <input type="email" name="correo" id="email">
+                    <label for="clave">Contraseña</label>
+                    <input type="password" name="contrasenha" id="clave">
+                </div>
+             </form>
         </section>
 
         <hr>
