--- a/15.InicioJS/index.html
+++ b/15.InicioJS/index.html
@@ -18,5 +18,6 @@
     </footer>
     <script src="js/variables.js"></script>
     <script src="js/condicionales.js"></script>
+    <script src="js/bucles.js"></script>
 </body>
 </html>
