--- a/15.InicioJS/index.html
+++ b/15.InicioJS/index.html
@@ -19,5 +19,6 @@
     <script src="js/variables.js"></script>
     <script src="js/condicionales.js"></script>
     <script src="js/bucles.js"></script>
+    <script src="js/if-else.js"></script>
 </body>
 </html>
