--- a/15.InicioJS/index.html
+++ b/15.InicioJS/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang='es'>
+
 <head>
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Inicio JS</title>
-<!-- <link rel='stylesheet' href='css/style.css'> -->
+    <!-- <link rel='stylesheet' href='css/style.css'> -->
 </head>
+
 <body>
     <header>
         <h1>Hola Mundo!</h1>
     </header>
     <main>
-        
+
     </main>
     <footer>
         <p>&copy; Creada por Lexie 2025</p>
@@ -20,5 +22,7 @@
     <script src="js/condicionales.js"></script>
     <script src="js/bucles.js"></script>
     <script src="js/if-else.js"></script>
+    <script src="js/extra.js"></script>
 </body>
+
 </html>
