--- a/15.InicioJS/index.html
+++ b/15.InicioJS/index.html
@@ -23,6 +23,7 @@
     <script src="js/bucles.js"></script>
     <script src="js/if-else.js"></script>
     <script src="js/extra.js"></script>
+    <script src="js/funciones.js"></script>
 </body>
 
 </html>
