--- a/17.FuncionesJS/index.html
+++ b/17.FuncionesJS/index.html
@@ -118,11 +118,12 @@
             </div>
             <div class="ejercicio">
                 <h3>Ej.4 - Devolver la letra del DNI</h3>
+                <input type="number" name="dni" id="dni">
                 <p class="enunciado">Pedir al usuario que escriba los números de su DNI y le devuelva el DNI completo.
                 </p>
-                <button>Probar función</button>
+                <button onclick="calcularLetraDNI()">Probar función</button>
                 <h3>Resultado:</h3>
-                <p>Este texto va a ser sustituído por el DNI completo del usuario</p>
+                <p id="resultadoEj4Fase3">Este texto va a ser sustituído por el DNI completo del usuario</p>
             </div>
             <div class="ejercicio">
                 <h3>Ej.5 - Comprobar si el DNI es correcto</h3>
